sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:6: error: value foreach is not a member of Int
  for(i<-getNombreValeurs()-2){
                           ^