sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
  var i:Int=0
  
  for(i<-getNombreValeurs()-2){
    if(plusPetit(getValeur(i),getValeur(i+1))==false){
      echange(getValeur(i),getValeur(i+1))
    }
  }
  
  
  
  
}